# Game-of-life

./: README.md  main.py  pyproject.toml
