[tool.poetry]
name = "game-of-life"
version = "0.1.0"
description = "Conway's game of life implemented in pygame."
authors = ["Siddhesh Agarwal <siddhesh.agarwal@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "2.1.2"
numpy = "^1.23.5"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
